src/app/components/members/ponthe-team/ponthe-team.component.scss
@import url("../../../../assets/assets_h/css/main.css");
@import "../../../PontheStyle.scss";

/* Background pictures of proms */
@mixin shared-background-props($pic) {
  background: $pic;
  background-color: color(DARK_GREY);
  background-size: cover;
  background-attachment: fixed;
  background-position: center center;
}
@mixin shared-background-props-overlay($pic) {
    background: $OVERLAY-IMAGE, $pic;
    background-color: color(DARK_GREY);
    background-size: 256px 256px, cover;
    background-attachment: fixed, fixed;
    background-position: top left, center center;
}
@mixin shared-background-props-trombi($pic) {
    background: $pic;
    background-color: color(DARK_GREY);
    background-size: contain;
    background-attachment: fixed, fixed;
    background-position: center center, center center;
    background-repeat: no-repeat;
    transition: background 0.5s ease-in-out;
}
@each $promo, $image in $PONTHE-PROMO-IMAGES {
    $number-pics-promo: map-get($INDEX-PONTHE-TROMBI, $promo);
    @for $index from 0 to length($image) {
        #p0#{$promo}_#{$index} {
            height: 100vh;
            
            @if $number-pics-promo > 0 and $number-pics-promo == $index {
                @include shared-background-props-trombi(nth($image, $index+1));
            } @else {
                @include shared-background-props (nth($image, $index+1));
            }
        }
    }
}

.box {
  box-shadow: $BOX-SHADOW-INPUT-BASE $BOX-SHADOW-INPUT-SHIFT-FOCUS;
}
.right > .box {
  border-radius: units(4) 0 0 units(4);

  @include sm {
    border-radius: units(4);
  }
}
.left > .box {
  border-radius: 0 units(4) units(4) 0;

  @include sm {
    border-radius: units(4);
  }
}

.style2 .content {
  opacity: 0.95;
}

.right_arrow, .left_arrow, #closer {
  position: absolute;
  cursor: pointer;
}
  
.right_arrow, .left_arrow {
    width: units(6);
    bottom: units(5);
    right: 0;
}
  
.right_arrow {
  margin-right: units(5);
}
  
.left_arrow {
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
  margin-right: units(12);
}


@media screen and (max-width: 1920px) {
  .style2 .content {
    width: 30% !important;
  }
}

@media screen and (max-width: 1650px) {
  .style2 .content {
    width: 35% !important;
    padding: 2em 1em 2em 2em;
  }

  .style2 .content p {
    margin-bottom: 0.6em;
    font-size: font-size(MEDIUM);
    line-height: 1.35em;
  }
}

@media screen and (max-width: 1280px) {
  .style2 .content {
    width: 35% !important;
    padding: 2em 1em 2em 2em;
  }

  .style2 .content p {
    margin-bottom: 0.6em;
    font-size: font-size(MEDIUM);
    line-height: 1.35em;
  }
}

@media screen and (max-width: 1000px) {
  .style2 .content {
    width: 40% !important;
  }

  .style2 .content p {
    line-height: 1.5em;
  }
}

.style2 .content {
	@include sm {
		width: 100% !important;
	}
  }
  
  .style2 .content p {
	  @include sm {
		  line-height: 1.35em;
		  font-size: font-size(LARGE);
	  }
  }
  
  .main.style1 {
	  @include sm {
		  padding: 0.6em 15px 0.6em 15px;
	  }
  }
  

